<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">無所不在學習導引系統</string>
    <string name="inside_error">內部出錯</string>
    <string name="about">關於本系統</string>
    <string name="help">使用說明</string>
    <string name="package_name">套件名稱:</string>
    <string name="version">版本:</string>
    <string name="getPackageInfo_error">套件資訊取得錯誤</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="login_tips_string">For 參與學習計劃: 帳號是學號，密碼是1234</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="logining">登入中，請稍後...</string>
    <string name="logouting">登出中，請稍後...</string>
    <string name="clear">清除</string>
    <string name="error_field_required">這個欄位是必填的</string>
    <string name="error_account_no_enable">此帳號已被停用</string>
    <string name="error_no_account">沒有此帳號</string>
    <string name="error_password">密碼錯誤</string>
    <string name="refresh">重新整理</string>
    <string name="system_settings">系統設定</string>
    <string name="minute">分鐘</string>
    <string name="retry">重試</string>
    <string name="exit">離開</string>
    <string name="cancel">取消</string>
    <string name="no_network_dialog_title">沒有網路</string>
    <string name="no_network_dialog_message">您現在沒有連上網路，請確定有開啟Wifi或行動網路。 \n沒有連線的情況下，無法繼續進行導引學習。</string>
    <string name="no_network_response_dialog_title">伺服器沒有回應</string>
    <string name="no_network_response_dialog_message">網路狀況不穩，也有可能伺服器位址設定錯誤或被擋。要重試看看嗎？</string>

    <!-- 錯誤訊息 -->
    <string name="error_dialog_title">出錯囉～</string>
    <string name="no_study_activity_dialog_message">此學習活動不存在</string>

    <!-- 教材包、地圖包下載 -->
    <string name="material_downloader">教材下載</string>

    <!-- 使用記錄 -->
    <string name="log_manager">記錄管理</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="upload_all_log">上傳所有記錄</string>

    <!-- 選擇學習活動主畫面 -->
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">歡迎!</string>
    <string name="name">姓名</string>
    <string name="grade">年級</string>
    <string name="student">學生</string>
    <string name="login_number">已登入次數：</string>
    <string name="learn_end_topic">已學習過的主題：</string>
    <string name="please_select_study_activity">請選擇可用的學習活動單元</string>
    <string name="getting_enableActivity">正在取得可用的學習活動中...</string>
    <string name="get_fail_enableActivity">可用的學習活動取得失敗</string>
    <string name="starting_study_activity">開始學習，請稍候...</string>
    <string name="finishing_study_activity">結束學習，請稍候...</string>

    <!-- 選擇學習活動Dialog -->
    <string name="title_start_study_activity_dialog">開始新的學習活動</string>
    <string name="theme_id">主題編號: </string>
    <string name="estimated_time">預估時間: </string>
    <string name="have_point_total">共有 %d 個學習點</string>
    <string name="will_id">預約編號: </string>
    <string name="validity_date">期限: </string>
    <string name="please_select_study_mode">請選擇導引模式</string>
    <string name="will_select_study_mode">將採用的導引模式</string>
    <string name="theme_recommand">主題推薦</string>
    <string name="force">強制</string>
    <string name="free_study">自由探索</string>
    <string name="recommand">推薦</string>
    <string name="number_point">個學習點</string>
    <string name="recommand_number_point">推薦 %d 個學習點</string>
    <string name="learning_time">學習時間</string>
    <string name="learning_time_limit">時間限制: </string>
    <string name="material_mode">偏好教材</string>
    <string name="start_study_activity">開始學習</string>
    <string name="resume_study_activity">繼續學習</string>
    <string name="cancel_study_activity">撤銷學習</string>

    <!-- 學習畫面 -->
    <string name="study_guide">學習導覽</string>
    <string name="no_study_activity_error">錯誤！沒有正在學習中的紀錄！</string>
    <string name="place_map">館區地圖</string>
    <string name="place_info">館場資訊</string>
    <string name="browse_material">瀏覽教材</string>
    <string name="finish_study_activity">結束學習</string>
    <string name="finish_study_activity_unfinished_message">目前尚未將所有展品學完，確定要提前結束學習嗎？</string>
    <string name="pause_study_activity">暫停學習</string>
    <string name="qrcode_scan">QR 掃描</string>
    <string name="keyin_tid">輸入標的編號</string>
    <string name="keyin_tid_message">請輸入標的編號</string>
    <string name="finish_study_title_message">所有學習點都已學習完成</string>
    <string name="finish_study_subtitle_message">請按下方按鈕離開</string>

    <!-- 瀏覽畫面 -->
    <string name="title_activity_browser">博物館瀏覽</string>

    <!-- 學習導引 -->
    <string name="start_target">入口</string>
    <string name="learning_next_point">請前往下個學習點:</string>
    <string name="learning_next_suggest_point">建議前往的學習點:</string>
    <string name="learning_unfinish_point">尚未學習過的學習點:</string>
    <string name="learning_next_point_time">下個點預估所需時間:</string>
    <string name="learning_remaining_time">學習時間尚有:</string>
    <string name="learning_remaining_point">學習點剩餘:</string>
    <string name="learning_no_get_recommand">沒推薦到學習點，請重新取得一次</string>
    <string name="learning_next_point_getting">取得中，請稍後...</string>
    <string name="is_not_in_recommand">這不是這次的推薦學習點喔～</string>

    <!-- QRCode掃描 -->
    <string name="no_camera">行動裝置找不到Camera!!</string>
    <string name="qr_is_url_not_num">此 QR-code內容 是個網址，非「標的編號」!!</string>
    <string name="qr_is_illegal">此內容不符合!!</string>
    <string name="qr_is_not_num">此內容不是數字喔!!</string>
    <string name="qr_no_content">掃描內容為空!!</string>

    <!-- 教材頁面 -->
    <string name="title_activity_material">教材</string>
    <string name="now_in_target">標的: </string>
    <string name="in_target_time">時間: </string>
    <string name="target_learn_time">預計所需: </string>
    <string name="double_back_press_to_exit_point">再按一次返回鍵，代表離開學習點繼續學習。</string>

    <!-- 館區地圖 -->
    <string name="title_activity_map">學習地圖</string>

    <!-- 館場資訊 -->
    <string name="place_open_time">開館時間</string>
    <string name="ticket_price">票價</string>
    <string name="store_info">商店資訊</string>

    <!-- 其他 -->
    <string name="title_activity_qrdecode">QRCode掃描</string>
    <string name="subtitle_activity_qrdecode">請將相機對準現場的QRCode條碼</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
