<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tw.edu.chu.csie.dblab.uelearning.android.ui.LoginActivity" >

    <item android:id="@+id/menu_place_info"
        android:visible="false"
        android:title="@string/place_info" />

    <item android:id="@+id/menu_place_map"
        android:visible="false"
        android:title="@string/place_map" />

    <item android:id="@+id/menu_browse_material"
        android:title="@string/browse_material" />

    <item android:id="@+id/menu_material_downloader"
        android:visible="false"
        android:title="@string/material_downloader" />

    <item android:id="@+id/menu_log_manager"
        android:title="@string/log_manager" />

    <item android:id="@+id/menu_help"
        android:visible="false"
        android:title="@string/help" />

    <item android:id="@+id/menu_setting"
        android:visible="false"
        android:title="@string/system_settings" />

    <item android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item android:id="@+id/menu_inside_tester"
        android:title="內部測試"
        android:visible="false"
        app:showAsAction="never" />

</menu>
