<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tw.edu.chu.csie.dblab.uelearning.android.ui.MainActivity">

    <item android:id="@+id/menu_refresh" android:title="@string/refresh"
        android:icon="@drawable/ic_action_light_refresh"
        app:showAsAction="always" />

    <item android:id="@+id/menu_logout" android:title="@string/logout"
        android:icon="@drawable/ic_action_light_logout"
        app:showAsAction="always" />

    <item android:id="@+id/menu_help"
        android:title="@string/help" />

    <item android:id="@+id/menu_setting"
        android:title="@string/system_settings" />

    <item android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item android:id="@+id/menu_inside_tester"
        android:title="內部測試"
        android:visible="false"
        app:showAsAction="never" />

</menu>
